<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/icon_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/icon_alarm"
        android:title="@string/notification"/>
    <item
        android:id="@+id/menuHistory"
        android:icon="@drawable/icon_time"
        android:title="@string/history"/>
    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/icon_refresh"
        android:title="@string/edit"/>
    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/icon_remove"
        android:title="@string/delete"/>
    <item
        android:id="@+id/menuLogout"
        android:icon="@drawable/icon_exit"
        android:title="@string/exit"/>


</menu>