<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">
        <LinearLayout
            android:id="@+id/layoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_menu"
               />

            <TextView
               android:id="@+id/Hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/hello"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />


        </LinearLayout>


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="47dp"
            android:layout_height="51dp"

            android:layout_marginStart="312dp"
            android:layout_marginLeft="312dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/admin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="@dimen/_16sdp"

            app:layout_constraintTop_toBottomOf="@id/imageProfile"
           >



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/activity_dashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_dashboard"

                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/layoutClients"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/layoutAlbum"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_dashboard"
                   >
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:src="@drawable/icon_user"
                        tools:ignore="ImageContrastCheck" />


                    <TextView
                        android:id="@+id/listen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/listen"

                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/amount1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount1"

                        android:textStyle="normal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp" />

                </LinearLayout>



                <LinearLayout
                    android:id="@+id/layoutAlbum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/layoutMusic"
                    app:layout_constraintStart_toEndOf="@id/layoutClients"
                    app:layout_constraintTop_toBottomOf="@id/activity_dashboard">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:src="@drawable/icon_album"
                        tools:ignore="ImageContrastCheck" />


                    <TextView
                        android:id="@+id/albumns"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/albumns"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/amount2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount2"
                        android:textStyle="normal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutMusic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutAlbum"
                    app:layout_constraintTop_toBottomOf="@id/activity_dashboard">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:src="@drawable/icon_music" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:id="@+id/trackss"
                        android:text="@string/trackss"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/musix"
                        android:text="@string/musix"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:textSize="@dimen/_8ssp" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>
        <Button
        android:id="@+id/btn_plans"
        android:layout_width="173dp"
        android:layout_height="291dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:shadowRadius="20"
        android:text="@string/btn_plans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_albums"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <Button
        android:id="@+id/btn_albums"
        android:layout_width="162dp"
        android:layout_height="198dp"
        android:text="@string/btn_albums"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/btn_achieve"
        android:layout_width="162dp"
        android:layout_height="232dp"
        android:text="@string/btn_achieve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_albums"
        app:layout_constraintVertical_bias="0.296" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        app:headerLayout="@layout/layout_navigation_header"
        app:menu="@menu/navigation_home"
        android:background="@color/card_background"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        android:layout_gravity="start"/>




</androidx.drawerlayout.widget.DrawerLayout>


